--- a/index.html
+++ b/index.html
@@ -2,8 +2,40 @@
 <html>
 <head>
 	<title>Morpion</title>
+	<meta charset="utf-8" />	
+	<script src="node_modules/jquery/dist/jquery.min.js" ></script>
+	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="js/app.js"></script>
 </head>
 <body>
+
+	<table class="table table-bordered">
+		<tbody>
+			<tr value="0">
+				<td value="0"></td>
+				<td value="1"></td>
+				<td value="2"></td>
+			</tr>
+			<tr value="1">
+				<td value="0"></td>
+				<td value="1"></td>
+				<td value="2"></td>
+			</tr>
+			<tr value="2">
+				<td value="0"></td>
+				<td value="1"></td>
+				<td value="2"></td>
+			</tr>
+		</tbody>
+		
+	</table>
+	<div class="container">
+		<div class="alert alert-success" role="alert" id="alert">
+						
+		</div>
+
+	</div>
 
 </body>
 </html>
