--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta charset="utf-8" />	
 	<script src="node_modules/jquery/dist/jquery.min.js" ></script>
 	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="style.css" />
 	<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
-
+	<div class = "jumbotron">
+		<h1>TIC TAC TOE</h1>
+	</div>
 	<table class="table table-bordered">
 		<tbody>
 			<tr value="0">
@@ -27,14 +30,11 @@
 				<td value="1"></td>
 				<td value="2"></td>
 			</tr>
-		</tbody>
-		
+		</tbody>	
 	</table>
 	<div class="container">
-		<div class="alert alert-success" role="alert" id="alert">
-						
-		</div>
-
+		<div id = "youWin" class="row"></div>
+		<button id="reset" class="row btn btn-primary">START AGAIN</button>
 	</div>
 
 </body>
